# SimulateOS

./: .gitignore  CMakeLists.txt  README.md  main.c  memory.c  memory.h  type.h
.github/workflows/: analyze_test_results.py  c-cpp.yml
devtool/: commands.sh
hardwares/: cpu.h  mmu.h
memory/: allocate.h  blocks.h  memory.h  mmu.h  page.h  type.h  virtual.h
process/: pcb.h  process.h
src/: kernel.c  main.c  test.c
src/common/: log.c  log.h
src/disk/: disk_block.c  disk_block.h  disk_io.c  disk_io.h  virtual_disk.c  virtual_disk.h
src/fs/: file.h  filesystem.c  filesystem.h
src/hardwares/: cpu.c  cpu.h  disk.c  disk.h  memory.c  memory.h  mmu.c  mmu.h
src/hardwares/disks/: disk0.disk  disk0.txt  disk1.disk  disk1.txt  disk2.disk  disk2.txt  disk3.disk  disk3.txt
src/memory/: allocate.c  allocate.h  blocks.c  blocks.h  type.c  type.h  virtual.c  virtual.h
src/process/: pcb.c  pcb.h  process.c  process.h
testing/: test.c
testing/test_disk/: test_disk.c  test_disk.h
testing/test_filesystem/: test_filesystem.c  test_filesystem.h
testing/test_hardwares/: test_cpu.c  test_cpu.h  test_hardwares.c  test_hardwares.h  test_memory.c  test_memory.h
